<resources>
    <string name="app_name">Day</string>
    <string name="title_activity_exhibition2">exhibition2</string>
    <string name="action_settings">Settings</string>
    <string name="exhibition2_text">
            我多么希望，有一个门口，\n
            早餐，阳光在草上。\n
            我们站着，扶着自己的门窗，\n
            门很低，但太阳是明亮的。\n
            草在结它的种子，风在摇它的叶子，\n
            我们站着，不说话，就十分美好"\n
            我多么希望，有一个门口，\n
            早餐，阳光在草上。\n
            我们站着，扶着自己的门窗，\n
            门很低，但太阳是明亮的。\n
            草在结它的种子，风在摇它的叶子，\n
            我们站着，不说话，就十分美好"\n
    </string>

    <string name="Logo">Logo</string>
    <string name="photos">图片</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>

    <string name="edit_thing">编辑事件</string>
    <string name="edit_name">事件名</string>
    <string name="edit_name_hint">请输入事件名</string>
    <string name="edit_content_hint">请输入内容</string>
    <string name="edit_date">日期</string>

    <string name="init_date">默认时间</string>
    <string name="choose_date">选择日期</string>
    <string name="choose_photo">选择照片</string>
    <string name="open_camera">打开相机</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- <string name="app_name">JustOption</string> -->
    <string name="mainView_menu_settings">Log out</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="userName">0123456789qwwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_</string>
    <string name="error_invalid_password">This password is invalid</string>
</resources>
