<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.jinjin.day4.Activity_edit">
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name_hint"
            android:textSize="@dimen/text_title_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        <include layout="@layout/line"/>

        <RelativeLayout
            android:id="@+id/edit_layout"
            android:layout_below="@id/edit_name"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton  android:src="@mipmap/picture_110"
                android:id="@+id/edit_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_margin="@dimen/image_margin"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/photos" />

            <TextView
                android:id="@+id/display_date"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/edit_content"
                android:text="@string/init_date"
                android:textStyle="bold|italic"
                android:textSize="@dimen/text_content_size"
                android:gravity="center_vertical"
                />
            <Button
                android:id="@+id/choose_date"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/edit_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorToolbar"
                android:text="@string/choose_date"/>

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:hint="@string/edit_content_hint"
                android:textSize="@dimen/text_content_size"
                android:maxLines="3"
                android:layout_below="@+id/edit_image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <include layout="@layout/line"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">



            <Button
                android:id="@+id/btn_save"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@mipmap/save2" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#666666"
                android:layout_gravity="center_horizontal">

            </View>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@mipmap/delete2"/>
        </LinearLayout>

    </LinearLayout>>
</LinearLayout>
